2011-08-11  Hendrik Tews <prooftree@askra.de>

	* release version 0.5 on 2011-08-11 13:53:56 UTC

2011-08-11  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2011-08-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* small fix

2011-08-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* changes towards release

2011-08-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* man page

2011-08-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* treat common config file errors

2011-08-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* sequent tooltips and more tool tip config

2011-08-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* change default colors
	* show current menu item
	* improve help

2011-08-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* improve makefile and configure

2011-08-06  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* tooltips with complete proof command

2011-08-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* external node window height configurable

2011-08-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* initial size of sequent window configurable

2011-08-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* improve save button

2011-08-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* save/restore buttons in configuration dialog

2011-07-31  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* change colors in configuration record into RGB triplets

2011-07-30  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* apply and ok in configuration window

2011-07-29  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* honor default size in configuration record

2011-07-29  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* honor tooltips in configuration record

2011-07-29  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* honor colors in configuration record

2011-07-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* honor fonts in configuration record

2011-07-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>
