@@ -1,3 +1,8 @@
+2011-08-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* fix to delete external node windows when retracting
+	* improve handling of orphaned node windows
+
 2011-08-11  Hendrik Tews <prooftree@askra.de>
 
 	* release version 0.5 on 2011-08-11 13:53:56 UTC
